--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@anthropic-ai/sdk": "^0.71.2",
     "@monaco-editor/react": "^4.6.0",
     "antd": "^5.22.6",
+    "better-sqlite3": "^12.5.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
