feat(.mcp.json): 添加Brave搜索引擎配置 fix(test-claude-sdk.ts, settings.json): 更新模型版本与环境变量配置
此提交为`.mcp.json`添加了Brave搜索引擎的相关配置，并在测试文件及设置文件中更新了Claude SDK的模型版本和相关环境变量配置。

Co-developed-by: Aone Copilot <noreply@alibaba-inc.com>

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@
 
 # Anthropic API Key
 # 从 https://console.anthropic.com/ 获取
-ANTHROPIC_API_KEY=your_api_key_here
+# ANTHROPIC_API_KEY=your_api_key_here
