feat(agent page): 添加URL参数处理及新按钮
此提交通过添加对URL参数的处理以及新的“聊天模式”按钮，增强了用户交互体验。同时，统一了API请求的方式，提升了代码的一致性。

Co-developed-by: Aone Copilot <noreply@alibaba-inc.com>

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-# 环境变量配置
+# 环境变量配置模板
 # 复制此文件为 .env.local 并填入实际值
 
-# Anthropic API Key
+# 应用基础路径 (部署时的子路径，如 /ai-dev)
+# 留空则部署在根路径
+NEXT_PUBLIC_BASE_PATH=/ai-dev
+
+# Anthropic API Key (必填)
 # 从 https://console.anthropic.com/ 获取
-# ANTHROPIC_API_KEY=your_api_key_here
+ANTHROPIC_API_KEY=your_api_key_here
