refactor(Workspace Management): 更新工作区管理逻辑及数据库结构
此次更新改进了工作区的管理和初始化流程，包括添加新的环境变量配置项，调整工作区数据模型，以及优化相关API接口处理逻辑。同时删除了一些不再使用的配置文件和模板文件，简化了项目的整体结构。

此提交通过引入新的环境变量配置项和调整数据库结构，增强了工作区管理的功能与灵活性。此外，还优化了工作区的初始化和更新逻辑，提升了系统的稳定性和用户体验。

--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@
 
 # 应用基础路径 (部署时的子路径，如 /ai-dev)
 NEXT_PUBLIC_BASE_PATH=/ai-dev
+
+# 工作区根目录路径 (用于存储所有工作区文件)
+# 留空则使用项目根目录下的 workspaces/ 文件夹
+WORKSPACES_ROOT=/home/admin/ai-dev-workspaces
