--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@
 # 留空则部署在根路径
 NEXT_PUBLIC_BASE_PATH=/ai-dev
 
+# 工作区根目录路径 (用于存储所有工作区文件)
+# 留空则使用项目根目录下的 workspaces/ 文件夹
+WORKSPACES_ROOT=
+
 # Anthropic API Key (必填)
 # 从 https://console.anthropic.com/ 获取
 ANTHROPIC_API_KEY=your_api_key_here
