r(API Logging): 替换控制台日志为统一的日志服务
此提交将各个API路由中的控制台日志替换为统一的日志服务，提升了日志管理和错误追踪的能力。同时，在`package.json`中添加了`winston`依赖，并在`.env`文件中增加了日志相关的环境变量配置。此外，还调整了一些业务逻辑中的日志输出格式，使其更加一致和详细。

--- a/.env
+++ b/.env
@@ -7,3 +7,8 @@ NEXT_PUBLIC_BASE_PATH=/ai-dev
 # 工作区根目录路径 (用于存储所有工作区文件)
 # 留空则使用项目根目录下的 workspaces/ 文件夹
 WORKSPACES_ROOT=/home/admin/ai-dev-workspaces
+# 日志配置
+# 日志级别: error, warn, info, http, verbose, debug, silly
+LOG_LEVEL=debug
+# 日志目录路径 (留空则输出到控制台)
+LOG_DIR=/home/admin/ai-devops/logs
