--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^16.1.0"
+    "react-syntax-highlighter": "^16.1.0",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
