--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "antd": "^5.22.6",
+    "async-mutex": "^0.5.0",
     "better-sqlite3": "^12.5.0",
     "next": "^15.1.0",
     "react": "^19.0.0",
